Revision history for Mojolicious-Plugin-BootstrapHelpers

{{$NEXT}}
 [API Changes]

 [Bug Fixes]

 [Documentation]

 [Enhancements]

 [New Features]

 [Other Changes]

 [Requirements]

 [Stats & Dependency Changes]

 [Testing]

0.0201 2016-03-23T22:59:42Z UTC
 [Bug Fixes]
 - Fixed an issue where an item in a 'nav' that wasn't a dropdown couldn't
   have attributes.

 [Documentation]
 - Removed duplicated pod sections.

 [Enhancements]
 - Added 'container' argument to navbar.
 - Updated Bootstrap version to 3.3.6 (when included via the cdn helpers).
 - Updated jQuery version to 2.2.2 (when included via the cdn helpers).

 [Other Changes]
 - No longer uses package block syntax.

 [Requirements]
 - Requires latest (1.44) List::Util instead of List::MoreUtils, since it
   now has 'uniq'.

 [Stats & Dependency Changes]
 - 9 files changed, 961 insertions(+), 821 deletions(-)
 - (run req) + List::Util 1.44
 - (run req) - List::MoreUtils
 - (test req) + IO::Handle (any)
 - (test req) + IPC::Open3 (any)
 - (dev req) + Badge::Depot 0.0103
 - (dev req) + Badge::Depot::Plugin::Coverage (any)
 - (dev req) + Badge::Depot::Plugin::Cpantesters (any)
 - (dev req) + Badge::Depot::Plugin::Kwalitee (any)
 - (dev req) + Badge::Depot::Plugin::Perl (any)
 - (dev req) + Badge::Depot::Plugin::Travis (any)
 - (dev req) + Dist::Zilla 5.000
 - (dev req) + Dist::Zilla::Plugin::Authority 1.009
 - (dev req) + Dist::Zilla::Plugin::BumpVersionAfterRelease::Transitional
   0.007
 - (dev req) + Dist::Zilla::Plugin::ChangeStats::Dependencies::Git 0.0100
 - (dev req) + Dist::Zilla::Plugin::Clean 0.07
 - (dev req) + Dist::Zilla::Plugin::Git 2.036
 - (dev req) + Dist::Zilla::Plugin::Git::CheckFor::CorrectBranch 0.013
 - (dev req) + Dist::Zilla::Plugin::Git::Commit (any)
 - (dev req) + Dist::Zilla::Plugin::InstallRelease 0.008
 - (dev req) + Dist::Zilla::Plugin::NextRelease::Grouped 0.0200
 - (dev req) + Dist::Zilla::Plugin::RewriteVersion::Transitional 0.007